applications/openeuler-website-docs/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/custom-http-errors: "400,500"
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Content-Type-Options "nosniff";
      add_header X-XSS-Protection "1; mode=block";
      add_header X-Frame-Options "DENY";
      add_header Cache-Control "no-cache";
      add_header Pragma "no-cache";
      rewrite ^/ru(/|$)(.*) https://docs.openeuler.org/en/ redirect;
  name: openeuler-docs-ingress
spec:
  tls:
    - hosts:
        - docs.openeuler.org
      secretName: openeuler-website-docs-lts
  rules:
    - host: docs.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-docs-service
              servicePort: 80
            path: /
